<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context=".LoginActivity">



        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:id="@+id/illustration"
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="16dp"
                android:contentDescription="@string/illustration"
                app:srcCompat="@drawable/illustration"
                tools:ignore="ImageContrastCheck" />

            <TextView
                android:id="@+id/tvHi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/illustration"
                android:layout_marginTop="-90dp"
                android:fontFamily="@font/sourcesanspro"
                android:paddingStart="16dp"
                android:paddingBottom="4dp"
                android:text="@string/hi_student"
                android:textSize="34sp"
                android:textStyle="bold"
                android:textColor="@color/white"/>

            <TextView
                android:id="@+id/tvSignin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvHi"
                android:layout_marginTop="9dp"
                android:fontFamily="@font/sourcesanspro"
                android:paddingStart="16dp"
                android:text="@string/sign_in_to_continue"
                android:textSize="20sp" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/tvSignin"
                android:layout_marginTop="25dp"
                android:background="@drawable/round_shape"
                android:orientation="vertical"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingBottom="16dp"

                >


                <EditText
                    android:id="@+id/edEmail"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginTop="50dp"
                    android:layout_marginBottom="20dp"
                    android:autofillHints="emailAddress"
                    android:backgroundTint="#A5A5A5"
                    android:drawableStart="@drawable/ic_baseline_email_24"
                    android:drawablePadding="5dp"
                    android:ems="10"
                    android:hint="@string/email_address"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/black"
                    android:textColorHint="#A5A5A5"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/edPassword"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginBottom="40dp"
                    android:autofillHints="password"
                    android:backgroundTint="#A5A5A5"
                    android:drawableStart="@drawable/ic_baseline_lock_24"
                    android:drawableEnd="@drawable/ic_baseline_eye_24"
                    android:drawablePadding="5dp"
                    android:ems="10"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:longClickable="false"
                    android:textColor="@color/black"
                    android:textColorHint="#A5A5A5"
                    android:textSize="16sp" />


                <RelativeLayout
                    android:id="@+id/btnSignin"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:background="@drawable/custom_button"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:fontFamily="@font/semibold_sourcesans"
                        android:text="@string/sign_in"
                        android:textAlignment="center"
                        android:textSize="16sp"
                        tools:ignore="RelativeOverlap" />

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:layout_marginEnd="25dp"
                        android:contentDescription="@string/right_arrow"
                        android:src="@drawable/ic_baseline_arrow_forward_24" />


                </RelativeLayout>

                <TextView
                    android:id="@+id/forgetPass"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/sourcesanspro"
                    android:paddingStart="16dp"
                    android:text="@string/forgot_password"
                    android:textColor="#313131"
                    android:textSize="16sp"
                    tools:ignore="RtlSymmetry" />
            </LinearLayout>

        </RelativeLayout>
</ScrollView>